--- a/src/components/panel/style.css
+++ b/src/components/panel/style.css
@@ -21,13 +21,17 @@
     padding: 0;
 }
 
-.name {
+.username {
     font-weight: 400;
     font-size: 3rem;
 }
-.points {
+.count {
     font-weight: 700;
     font-size: 5rem;
+}
+.winns {
+    font-weight: 700;
+    font-size: 2rem;
 }
 
 .panel:hover {
@@ -37,5 +41,5 @@
 
 .panel:active {
     box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
-    transform: scale(1.03);
+    transform: scale(1.04);
 }
